[package]
name = "template-rust"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = []
keywords = []
description = """
A template Rust library crate.
"""
repository = "https://github.com/alecmocatta/template-rust"
homepage = "https://github.com/alecmocatta/template-rust"
documentation = "https://docs.rs/template-rust/0.1.0"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/template-rust", pipeline = "tests" }
maintenance = { status = "passively-maintained" }

[dependencies]
futures = "0.3"
rcgen = "0.7"
tokio = { version = "0.2", features = ["macros"] }
# quinn = { version = "0.5", git = "https://github.com/djc/quinn" }
quinn = { version = "0.5", path = "quinn/quinn" }


[profile.release]
debug = true
overflow-checks = true
