[package]
name = "chanel"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = []
keywords = []
description = """
A template Rust library crate.
"""
repository = "https://github.com/alecmocatta/chanel"
homepage = "https://github.com/alecmocatta/chanel"
documentation = "https://docs.rs/chanel/0.1.0"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/chanel", pipeline = "tests" }
maintenance = { status = "actively-developed" }

[dependencies]
either = "1.5"
futures = "0.3"
itertools = "0.8"
quinn = { version = "0.5", git = "https://github.com/djc/quinn", default-features = false, features = ["tls-rustls"] }
rand = { version = "0.7", features = ["small_rng"] }
rcgen = { version = "0.7", default-features = false }
tokio = { version = "0.2", features = ["macros", "sync"] }
tracing-subscriber = "0.2"

[profile.release]
debug = true
overflow-checks = true
